<resources>
    <string name="app_name">HR_Module</string>
    <string name="name">NAME*</string>
    <string name="email">EMAIL*</string>
    <string name="password">PASSWORD*</string>
    <string name="Verify_password">VERIFY PASSWORD*</string>
    <string name="next">Continue</string>
    <string name="signup">SIGN UP</string>
    <string name="Company_detail">Company detail</string>
    <string name="add_user">ADD USER</string>
    <string name="company_name">COMPANY NAME</string>
    <string name="company_levels">COMPANY LEVELS</string>
    <string name="ranking_criteria">RANKING CRITERIA</string>
    <string name="vacation_dates">VACATION DATES</string>
    <string name="create_company">CREATE COMPANY</string>
    <string name="done">DONE!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
