<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@android:color/white"

    tools:context="com.dlc.hr_module.Signup.ConfigFragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    >

    <TextView

        android:id="@+id/companytv"
        android:layout_width="149sp"
        android:layout_height="82sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="31sp"
        android:text="@string/Company_detail"
        android:textColor="@color/signup"
        android:textStyle="bold"
        android:textSize="32sp"

        />

</RelativeLayout>

    <GridLayout

        android:columnCount="2"
        android:rowCount="3"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:padding="2sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        >
<!-- Column 1-->
        <android.support.v7.widget.CardView
            android:id="@+id/companycv"
            android:background="@android:color/transparent"
            android:layout_width="0sp"
            android:layout_height="0sp"

            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_rowWeight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"

            >

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@android:color/white"

                android:orientation="vertical">


                <ImageView
                    android:background="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/companyname"
                    android:scaleType="centerInside"
                    />

                <TextView
                    android:id="@+id/compname_tv"
                    android:layout_width="79sp"
                    android:layout_height="46sp"
                    android:textSize="13sp"
                    android:layout_centerInParent="true"
                    android:textColor="@android:color/white"
                    android:text="@string/company_name"
                    />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
<!-- Column 2-->
        <android.support.v7.widget.CardView

            android:layout_height="0dp"
            android:layout_width="0dp"

            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="8dp"

            >
            <RelativeLayout
                android:background="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:layout_gravity="center_horizontal|center_vertical">


                <ImageView
                    android:src="@drawable/companylevels"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/complevel_tv"
                    android:layout_width="79sp"
                    android:layout_height="46sp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/company_levels"
                    android:textColor="@android:color/white"
                    android:textSize="13sp" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <!-- Column 3-->
        <android.support.v7.widget.CardView
            android:layout_height="0dp"
            android:layout_width="0dp"

            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="8dp">
            <RelativeLayout
                android:background="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:layout_gravity="center_horizontal|center_vertical">


                <ImageView
                    android:src="@drawable/green"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/vac_days"
                    android:layout_width="79sp"
                    android:layout_height="46sp"
                    android:textColor="@android:color/white"
                    android:text="@string/vacation_dates"
                    android:layout_centerInParent="true"
                    android:textSize="13sp"
                    />

            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_height="0dp"
            android:layout_width="0dp"

            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="8dp">
            <RelativeLayout
                android:background="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:layout_gravity="center_horizontal|center_vertical">


                <ImageView
                    android:src="@drawable/purple"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/ranking_criteria"
                    android:layout_width="79sp"
                    android:layout_height="46sp"
                    android:textSize="13sp"
                    android:text="@string/ranking_criteria"
                    android:textColor="@android:color/white"
                    android:layout_centerInParent="true"

                    />

            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <!-- Column 4-->
        <!--<android.support.v7.widget.CardView-->
            <!--android:background="@android:color/white"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_width="0dp"-->

            <!--android:layout_columnWeight="1"-->
            <!--android:layout_rowWeight="1"-->
            <!--android:layout_marginBottom="16dp"-->
            <!--android:layout_marginLeft="16dp"-->
            <!--android:layout_marginRight="16dp"-->
            <!--app:cardElevation="8dp"-->
            <!--app:cardCornerRadius="8dp"-->

            <!--&gt;-->
            <!--<LinearLayout-->
                <!--android:background="@android:color/white"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="vertical"-->

                <!--android:layout_gravity="center_horizontal|center_vertical">-->


                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center_horizontal"-->
                    <!--android:src="@drawable/purple" />-->


            <!--</LinearLayout>-->
        <!--</android.support.v7.widget.CardView>-->

        <!-- Column 1-->
        <android.support.v7.widget.CardView
            android:layout_height="0dp"
            android:layout_width="0dp"

            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="8dp"

            >
            <RelativeLayout
                android:background="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:layout_gravity="center_horizontal|center_vertical">


                <ImageView
                    android:src="@drawable/lightblue"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/add_user"
                    android:layout_width="79sp"
                    android:layout_height="46sp"
                    android:textAlignment="center"
                    android:layout_centerInParent="true"
                    android:textSize="13sp"
                    android:textStyle=""
                    android:text="@string/add_user"
                    android:textColor="@android:color/white"
                    />

            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <!-- Column 2-->
        <android.support.v7.widget.CardView
            android:layout_height="0dp"
            android:layout_width="0dp"

            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="8dp"

            >
            <RelativeLayout
                android:background="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:layout_gravity="center_horizontal|center_vertical">


                <TextView
                    android:id="@+id/create_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="#f76a9c"
                    android:gravity="center_horizontal"
                    tools:text="CREATE
COMPANY!"


                    />

            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </GridLayout>


</LinearLayout>
